<resources>
    <string name="app_name">GRE Verbal</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="search">search</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="tc_hint_one">1. Read through the passage to get an overall sense of it.</string>
    <string name="tc_hint_two">2. Identify words or phrases that seem particularly significant, either because they emphasize the structure of the passage (words like although or moreover) or because they are central to understanding what the passage is about.</string>
    <string name="tc_hint_three">3. Think up your own words for the blanks. Try to fill in the blanks with words or phrases that seem to you to fit and then see if similar words are offered among the answer choices.</string>
    <string name="tc_hint_four">4. Do not assume that the first blank is the one that should be filled first. Perhaps one of the other blanks is easier to fill first. Select your choice for that blank, and then see whether you can complete another blank. If none of the choices for the other blank seem to make sense, go back and reconsider your first selection.</string>
    <string name="tc_hint_five">5. Double-check your answers. When you have made your selection for each blank, check to make sure that the passage is logically, grammatically, and stylistically coherent.</string>
    <string name="category_tc">Text Completion</string>
    <string name="rc_hint_one">1. Evaluate each answer choice separately on its own merits. When evaluating one answer choice, do not take the others into account.</string>
    <string name="rc_hint_two">2. Make sure the answer choice you pick accurately and completely answers the question posed. Be careful not to be misled by answer choices that are only partially true or only partially answer the question. Be careful also not to pick an answer choice simply because it is a true statement.</string>
    <string name="rc_hint_three">3. Do not be disturbed if you think all three answer choices are correct. Questions of this type can have three correct answer choices.</string>
    <string name="rc_hint_four">4. Be careful to evaluate each of the relevant sentences in the passage separately before selecting your answer. Do not evaluate any sentences that are outside the paragraphs under consideration.</string>
    <string name="rc_hint_five">5. Do not select a sentence if the description given in the question only partially applies. A correct answer choice must accurately match the description in the question. Note, however, that the description need not be complete, that is, there may be aspects of the sentence that are not fully described in the question.</string>
    <string name="category_rc">Reading Comprehension</string>
    <string name="se_hint_one">1. Read the sentence to get an overall sense of it.</string>
    <string name="se_hint_two">2. Identify words or phrases that seem particularly significant, either because they emphasize the structure of the sentence (words like although or moreover) or because they are central to understanding what the sentence is about.</string>
    <string name="se_hint_three">3. Think up your own words for the blanks. Try to fill in the blank with a word that seems to you to fit and then see if two similar words are offered among the answer choices. If you find some word that is similar to what you are expecting but cannot find a second one, do not become fixated on your interpretation; instead, see whether there are other words among the answer choices that can be used to fill the blank coherently.</string>
    <string name="se_hint_four">4. Double-check your answers. When you have selected your pair of answer choices for the blank, check to make sure that each one produces a sentence that is logically, grammatically, and stylistically coherent, and that the two sentences mean the same thing.</string>
    <string name="category_se">Sentence Equivalence</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="menu_card_information">Card Info</string>
    <string name="menu_card_delete">Delete Card</string>
    <string name="menu_card_set_setup">Setup</string>
    <string name="menu_card_set_external">Flashcard Exchange</string>
    <string name="menu_card_set_about">About</string>
    <string name="menu_card_set_help">Help</string>
    <string name="menu_card_magnify">Zoom In</string>
    <string name="menu_card_reduce">Zoom Out</string>
    <string name="card_information">Card Set: %1$s</string>
    <string name="list_menu_add">Add Card</string>
    <string name="list_meanu_delete">Delete</string>
    <string name="list_no_card_sets_message">There are no card sets</string>
    <string name="add_card_front_title">Front Side</string>
    <string name="add_card_back_title">Back Side</string>
    <string name="add_card_save_message_error">ERROR: Was not able to save card</string>
    <string name="add_card_save_message_warning1">Invalid front page entry</string>
    <string name="add_card_save_message_warning2">Invalid entry</string>
    <string name="add_card_save_message_back_page">Enter back side text and save</string>
    <string name="add_card_save_message_success">Card saved</string>
    <string name="new_card_set_message">Enter new card set name:</string>
    <string name="new_card_set_save_button">Save</string>
    <string name="new_card_set_cancel_button">Cancel</string>
    <string name="new_card_set_dialog_message_warning1">Name already exists</string>
    <string name="new_card_set_dialog_message_warning2">Invalid name</string>
    <string name="view_cards_emtpy_set_message">Card set is empty</string>
    <string name="view_cards_fetch_remote_error">Was not able to get data from Flashcard Exchange</string>
    <string name="input_validation_warning">Invalid input</string>
    <string name="input_validation_warning2">The card\'s front side cannot be empty</string>
    <string name="delete_card_set_dialog_message">Are you sure you want to delete the card set?</string>
    <string name="delete_card_set_dialog_ok">Yes</string>
    <string name="delete_card_set_dialog_cancel">Cancel</string>
    <string name="setup_user_name">Enter User Name</string>
    <string name="setup_title">Flashcard Exchange</string>
    <string name="setup_save_user_name_success">Saved User Name</string>
    <string name="setup_save_user_name_error">Flashcard Exchange Error: User name is unknown</string>
    <string name="setup_save_user_name_failure">Was not able to verify user name</string>
    <string name="setup_no_user_name_defined">Please provide your Flashcard Exchange user name.</string>
    <string name="setup_show_sample_title">Show sample card sets</string>
    <string name="setup_changed_font_size">Saved font size change</string>
    <string name="util_connectivity_error">Cannot connect to the Internet</string>
    <string name="util_flash_card_exchange_api_error">Flashcard Exchange Error</string>
    <string name="delete_last_card_message">Deleted last card from card set:\n%1$s</string>
    <string name="delete_card">Deleted card</string>
    <string name="external_data_message_error">Application error: Getting external data</string>

    <string name="about_title">Flash Cards</string>
    <string name="about_author">Thomas Amsler\ntamsler@gmail.com</string>
    <string name="about_version">Version\n</string>

    <string name="conversion">Converting Flash Cards &#8230;</string>

    <!--  Content Descriptors -->
    <string name="button_save">Save</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_close">Close</string>
    <string name="button_list">Show Card Sets</string>
    <string name="button_new_card_set">New Card Set</string>
    <string name="button_edit">Edit</string>
    <string name="button_magnify">Magnify</string>
    <string name="button_backside">Backside</string>
    <string name="button_overflow">Overflow</string>
    <string name="image_divider">Divider</string>
    <string name="image_previous">Previous</string>

    <string name="help_dialog_title">Help</string>

    <string name="email_feedback_chooser">Send your email in:</string>
    <string name="email_feedback_subject">Flash Cards: User Feedback</string>
</resources>
